<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.classroom</groupId>
    <artifactId>student-doc-manager</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Student Document Manager</name>
    <description>Classroom project: Manage student documents with Substrate SDK Blob and DocStore</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <multicloudj.version>0.2.27</multicloudj.version>
    </properties>

    <dependencies>
        <!-- Substrate SDK: Blob (replaces AWS S3) -->
        <dependency>
            <groupId>com.salesforce.multicloudj</groupId>
            <artifactId>blob-client</artifactId>
            <version>${multicloudj.version}</version>
        </dependency>

        <!-- Substrate SDK: Blob AWS provider -->
        <dependency>
            <groupId>com.salesforce.multicloudj</groupId>
            <artifactId>blob-aws</artifactId>
            <version>${multicloudj.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.salesforce.multicloudj</groupId>
            <artifactId>blob-gcp</artifactId>
            <version>${multicloudj.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Substrate SDK: DocStore (replaces AWS DynamoDB) -->
        <dependency>
            <groupId>com.salesforce.multicloudj</groupId>
            <artifactId>docstore-client</artifactId>
            <version>${multicloudj.version}</version>
        </dependency>

        <dependency>
            <groupId>com.salesforce.multicloudj</groupId>
            <artifactId>docstore-gcp-firestore</artifactId>
            <version>${multicloudj.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Substrate SDK: DocStore AWS provider -->
        <dependency>
            <groupId>com.salesforce.multicloudj</groupId>
            <artifactId>docstore-aws</artifactId>
            <version>${multicloudj.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- SLF4J + Logback for logging -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.14</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.classroom.docmanager.App</mainClass>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
